starlark-rust/starlark/src/typing/tests/golden/test_bit_or_with_load.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Code:
load("foo.bzl", "foo")
test = int | foo()
def test() -> test:
    pass

No errors.

Approximations:
Approximation: Unknown type = "Span { begin: Pos(57), end: Pos(61) }"

Compiler typechecker (eval):
Compiler typechecker and eval results mismatch.

error: String literals are not allowed in type expressions: `"test"`
 --> filename:3:8
  |
3 | test = int | foo()
  |        ^^^^^^^^^^^
  |
